# gtkmm_app

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
cmake/: FindMachineWorks.cmake
menu/: menubar.ui  menubar_test.ui  toolbar.ui  workspace.ui
src/: CMakeLists.txt  MachineWorks.cpp  MachineWorks.h  MainApplication.cpp  MainApplication.h  MainWindow.cpp  MainWindow.h  MwGLArea.cpp  MwGLArea.h  MyGLArea.cpp  MyGLArea.h  RangeWidgetExample.h  main.cpp
src_gpt/: Application.cpp  Application.h  CMakeLists.txt  GLViewport.cpp  GLViewport.h  MainWindow.cpp  MainWindow.h  PipelineBrowser.cpp  PipelineBrowser.h  main.cpp
src_gpt/resources/ui/: main_window.ui
src_test/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  ModelItem.h  RadioButtonExample.cpp  RadioButtonExample.h  RangeWidgetExample.cpp  main.cpp
